# notion-llm

./: .gitignore  Cargo.toml  Readme.md
src/: fast_embed.rs  lib.rs  main.rs  notion_pages_setup.rs  qdrantdb.rs
