[package]
name = "notion-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = "0.11.23"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = {version = "1.0.108"}