[package]
name = "notion-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
tonic = "0.10.2"
reqwest = "0.11.23"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = {version = "1.0.108"}
fastembed = "1.9.0"
qdrant-client = "1.6.0"
log = "0.4.20"
env_logger = "0.10.0"
uuid = {version = "1.6.1", features = ["v5", "fast-rng"]}